# cloudymc

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  Dockerfile  README.md  entrypoint.sh
.devcontainer/: devcontainer.json
.github/workflows/: build-release.yml
ansible/: .ansible-lint  ansible.cfg  requirements.yml  site.yml
ansible/group_vars/: all.yml
backend/: pyproject.toml
backend/app/: __init__.py  config.py  processes.py  routes.py  runner.py
backend/app/data/: ansible_map.json  terraform_oci_map.json
backend/app/static/: index.html
backend/app/utils/: other.py  stream_event.py
backend/requirements/: common.txt  dev.txt  prod.txt
backend/src/app/: __init__.py  config.py  job_manager.py  main.py  processes.py  runner.py
backend/src/app/data/: ansible_map.json  terraform_oci_map.json
backend/src/app/utils/: json_helpers.py  processes.py  ssh.py
docs/: advanced.md  compose.yml  configuration.md  installation.md  podman.container  podman.md
frontend/: .npmrc  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/src/: App.tsx  index.css  index.tsx
frontend/src/api/: formHandlers.ts
frontend/src/components/: ErrorDialog.tsx  FormControls.tsx  FormTemplates.tsx  InfoDialog.tsx  InstanceStatus.tsx  ThemeToggle.tsx  formHandlers.ts  requests.ts  transformFormData.ts  useTheme.ts
terraform/: .terraform.lock.hcl  data.tf  defaults.auto.tfvars  hosts.yml.tftpl  init.tf  main.tf  outputs.tf  validation.tf  variables.tf
(+40 files in other folders)
