[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudymc"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.package-dir]
cloudymc = "app"

[tool.ruff]
line-length=100
target-version = "py313"

[tool.ruff.lint]
select = [
	"E",
	"F",
	"B",
	"I",
	"C4",
	"UP",
	"SIM",
	"RUF"
]
ignore = ["E501"]
fixable = ["ALL"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
line-ending = "auto"
